Added IPC flag to yaml configuration